# wing-carrier

./: .gitignore  README.md  pyproject.toml  wing-carrier.wpr  wing-carrier_10.wpr
.github/workflows/: python-publish.yml
src/wingcarrier/: __init__.py  wingdbstub.py
src/wingcarrier/pigeons/: cascadeur.py  maya.py  pigeon.py  test_file.py
src/wingcarrier/winghotkeys/: dispatcher.py
summaries/: wingcarrier_overview.md
wingcarrier/pigeons/: cascadeur.py  debug.py
wingcarrier/wing-ide-hotkeys/: dispatcher.py
