[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "wing-carrier"
version = "0.9.1"
authors = [
  { name="Nathaniel A", email="developer@3dcg.guru" },
]
description = "Send commands from Wing-IDE to DCC apps or between DCC apps"
readme = "README.md"
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "psutil",
]


[tool.hatch.build]
include = [
  "wingcarrier/*.py",
]


[project.urls]
"Homepage" = "https://github.com/Nathanieljla/wing-carrier"
